[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Flipper.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Bumper.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/DeathZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/Switch.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/SlingShot.tscn" type="PackedScene" id=6]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=1]
gradient = SubResource( 2 )
width = 500
height = 2400

[node name="Main" type="Node2D"]
position = Vector2( 541, 1202 )
script = ExtResource( 4 )

[node name="LeftFlipperControl" type="TouchScreenButton" parent="."]
position = Vector2( -523, -1192 )
scale = Vector2( 1, 0.999121 )
normal = SubResource( 1 )
action = "flip_left"

[node name="RightFlipperControl" type="TouchScreenButton" parent="."]
position = Vector2( 34, -1201 )
normal = SubResource( 1 )
action = "flip_right"

[node name="Table" type="Node2D" parent="."]

[node name="Flippers" type="Node2D" parent="Table"]
position = Vector2( -541, -1203 )

[node name="LeftFlipper" parent="Table/Flippers" instance=ExtResource( 1 )]
position = Vector2( 393, 2216 )
rotation = 3.14159
scale = Vector2( 1, -1 )
flipper_side = "left"

[node name="RightFlipper" parent="Table/Flippers" instance=ExtResource( 1 )]
position = Vector2( 683, 2216 )
flipper_side = "right"

[node name="Bumpers" type="Node" parent="Table"]

[node name="Bumper1" parent="Table/Bumpers" instance=ExtResource( 2 )]
position = Vector2( 609, 1745 )

[node name="Bumper2" parent="Table/Bumpers" instance=ExtResource( 2 )]
position = Vector2( 438, 1811 )

[node name="Bumper3" parent="Table/Bumpers" instance=ExtResource( 2 )]
position = Vector2( 574, 1930 )

[node name="BallStart" type="Position2D" parent="Table"]
position = Vector2( -2, -98 )

[node name="Walls" type="Node" parent="Table"]

[node name="LeftBottom" type="StaticBody2D" parent="Table/Walls"]
position = Vector2( 537.599, 1092 )

[node name="Polygon2D" type="Polygon2D" parent="Table/Walls/LeftBottom"]
position = Vector2( -106, 960 )
offset = Vector2( 106, -960 )
polygon = PoolVector2Array( -388, 999, -177, 1140, -149, 1094, -364, 950, -367, 780, -390, 780 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table/Walls/LeftBottom"]
visible = false
polygon = PoolVector2Array( -388, 999, -177, 1140, -149, 1094, -364, 950, -367, 780, -390, 780 )

[node name="SlingShot" parent="Table/Walls/LeftBottom" instance=ExtResource( 6 )]
position = Vector2( -240.599, 890 )
rotation = 1.10538
points = 500

[node name="Outline" type="StaticBody2D" parent="Table/Walls"]
position = Vector2( 537.599, 1092 )

[node name="Polygon2D" type="Polygon2D" parent="Table/Walls/Outline"]
polygon = PoolVector2Array( -67.599, 1313, -473, 1040, -473, 790, -464, 763, -449, 743, -422, 726, -369, 712, -365, 593, -360, 561, -350, 547, -333, 535, -361, 491, -401, 399, -443, 193, -456, 51, -451, -27, -388, -155, -271, -273, -61, -357, 167, -333, 320, -252, 440, -95, 457, 50, 441, 188, 379, 442, 329, 526, 341, 539, 354, 555, 365, 579, 362, 707, 401, 718, 440, 736, 448, 747, 456, 768, 466, 1046, 73.401, 1314, 537.401, 1318, 530, -538, -540, -538, -528.599, 1316 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table/Walls/Outline"]
position = Vector2( -4, 0 )
polygon = PoolVector2Array( -67.599, 1316, -473, 1040, -473, 790, -464, 763, -449, 743, -422, 726, -369, 712, -365, 593, -360, 561, -350, 547, -333, 535, -361, 491, -401, 399, -443, 193, -456, 51, -451, -27, -388, -155, -271, -273, -61, -357, 167, -333, 320, -252, 440, -95, 457, 50, 441, 188, 379, 442, 329, 526, 341, 539, 354, 555, 365, 579, 362, 707, 401, 718, 440, 736, 448, 747, 456, 768, 466, 1046, 76.401, 1315, 374.401, 1315, 542.401, 1318, 530, -538, -540, -538, -525.599, 1318 )

[node name="RightBottom" type="StaticBody2D" parent="Table/Walls"]
position = Vector2( 537.599, 1092 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Polygon2D" type="Polygon2D" parent="Table/Walls/RightBottom"]
position = Vector2( -106, 960 )
offset = Vector2( 106, -960 )
polygon = PoolVector2Array( -388, 999, -177, 1140, -149, 1094, -364, 950, -367, 780, -390, 780 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table/Walls/RightBottom"]
visible = false
polygon = PoolVector2Array( -388, 999, -177, 1140, -149, 1094, -364, 950, -367, 780, -390, 780 )

[node name="SlingShot" parent="Table/Walls/RightBottom" instance=ExtResource( 6 )]
position = Vector2( -220.694, 886.807 )
rotation = 4.2623
scale = Vector2( 1, -1 )
points = 500

[node name="CenterArea" type="StaticBody2D" parent="Table/Walls"]
position = Vector2( 526, 1750.85 )

[node name="Polygon2D" type="Polygon2D" parent="Table/Walls/CenterArea"]
polygon = PoolVector2Array( -315, -657, -347, -608, -347, -541, -343, -450, -325, -376, -301, -320, -256, -237, -219, -272, -281, -377, -315, -487, -322, -588 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table/Walls/CenterArea"]
visible = false
polygon = PoolVector2Array( -315, -657, -347, -608, -347, -541, -343, -450, -325, -376, -301, -320, -256, -237, -219, -272, -281, -377, -315, -487, -322, -588 )

[node name="Polygon2D2" type="Polygon2D" parent="Table/Walls/CenterArea"]
polygon = PoolVector2Array( 239, -279, 278, -246, 309, -291, 331, -345, 359, -412, 369, -531, 369, -643, 352, -733, 318, -787, 267, -844, 208, -894, 205, -786, 205, -732, 205, -657, 202, -617, 203, -552, 190, -497, 168, -464, 174, -440, 194, -429, 234, -504, 241, -578, 238, -622, 343, -634, 342, -547, 334, -496, 307, -389, 283, -346 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Table/Walls/CenterArea"]
visible = false
polygon = PoolVector2Array( 239, -279, 278, -246, 309, -291, 331, -345, 359, -412, 369, -531, 369, -643, 352, -733, 318, -787, 267, -844, 208, -894, 205, -786, 205, -732, 205, -657, 202, -617, 203, -552, 190, -497, 168, -464, 174, -440, 194, -429, 234, -504, 241, -578, 238, -622, 343, -634, 342, -547, 334, -496, 307, -389, 283, -346 )

[node name="Polygon2D3" type="Polygon2D" parent="Table/Walls/CenterArea"]
polygon = PoolVector2Array( -191, -775, -222, -716, -228, -670, -228, -624, -229, -562, -226, -501, -219, -460, -193, -409, -153, -380, -121, -371, -73, -424, -75, -454, -115, -503, -160, -549, -188, -591, -198, -631, -210, -678, -202, -717, -187, -727 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Table/Walls/CenterArea"]
visible = false
polygon = PoolVector2Array( -191, -775, -222, -716, -228, -670, -228, -624, -229, -562, -226, -501, -219, -460, -193, -409, -153, -380, -121, -371, -73, -424, -75, -454, -115, -503, -160, -549, -188, -591, -198, -631, -210, -678, -202, -717, -187, -727 )

[node name="Polygon2D4" type="Polygon2D" parent="Table/Walls/CenterArea"]
polygon = PoolVector2Array( -79, -888, -65, -906, -55, -904, -46, -888, -49, -811, -77, -796 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Table/Walls/CenterArea"]
visible = false
polygon = PoolVector2Array( -79, -888, -65, -906, -55, -904, -46, -888, -49, -811, -77, -796 )

[node name="Polygon2D5" type="Polygon2D" parent="Table/Walls/CenterArea"]
polygon = PoolVector2Array( 65, -927, 94, -929, 97, -860, 94, -847, 66, -845, 63, -858 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Table/Walls/CenterArea"]
visible = false
polygon = PoolVector2Array( 65, -927, 94, -929, 97, -860, 94, -847, 66, -845, 63, -858 )

[node name="LeftBumper" type="StaticBody2D" parent="Table/Walls"]
position = Vector2( 526, 1750.85 )

[node name="Polygon2D6" type="Polygon2D" parent="Table/Walls/LeftBumper"]
polygon = PoolVector2Array( -274, 145, -275, 247, -189, 317 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Table/Walls/LeftBumper"]
visible = false
polygon = PoolVector2Array( -274, 145, -275, 247, -189, 317 )

[node name="RightBumper" type="StaticBody2D" parent="Table/Walls"]
position = Vector2( 526, 1750.85 )

[node name="Polygon2D" type="Polygon2D" parent="Table/Walls/RightBumper"]
position = Vector2( 8, -4 )
scale = Vector2( -1, 1 )
polygon = PoolVector2Array( -274, 145, -275, 247, -189, 317 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table/Walls/RightBumper"]
visible = false
position = Vector2( 8, -2 )
scale = Vector2( -1, 1 )
polygon = PoolVector2Array( -274, 145, -275, 247, -189, 317 )

[node name="DeathZone" parent="Table" instance=ExtResource( 3 )]
position = Vector2( -10, 657 )

[node name="Switches" type="Node" parent="Table"]

[node name="Switch" parent="Table/Switches" instance=ExtResource( 5 )]
position = Vector2( 308, 1521 )

[node name="HUD" type="CanvasLayer" parent="."]
scale = Vector2( 10, 10 )
transform = Transform2D( 10, 0, 0, 10, 0, 0 )

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 0.9
margin_top = 3.4
margin_right = 51.9
margin_bottom = 17.4
text = "Score: 0"

[node name="BallsLabel" type="Label" parent="HUD"]
margin_left = 2.6
margin_top = 20.2
margin_right = 49.6
margin_bottom = 34.2
text = "Balls: 0"
